fix(client): minor fix to navbar height on mobile

--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -2,10 +2,7 @@
 
 @layer components {
   .navbar-component {
-    @apply fixed top-0 left-0 w-full h-[44px] z-10 
-           /* temp */
-           border border-red-500
-           /*  */
+    @apply fixed top-0 left-0 w-full h-[48px] z-10 
            tablet:h-[96px]
            laptopHD:h-[120px]
            desktop:h-[142px]
